force-app/main/default/objects/GearsHealth__Test_Class_Audit_Parameters__mdt/GearsHealth__Test_Class_Audit_Parameters__mdt.object-meta.xml
<CustomObject>
    <label>Test Class Audit Parameter</label>
    <pluralLabel>Test Class Audit Parameter</pluralLabel>
</CustomObject>