force-app/main/default/objects/GearsHealth__Test_Class_Audit_Parameters__mdt/fields/GearsHealth__Administrator_Email__c.field-meta.xml
<CustomField>
    <fullName>GearsHealth__Administrator_Email__c</fullName>
    <label>Administrator Email</label>
    <type>Email</type>
</CustomField>