force-app/main/default/objects/GearsHealth__Test_Class_Audit_Parameters__mdt/fields/GearsHealth__Administrator_Name__c.field-meta.xml
<CustomField>
    <fullName>GearsHealth__Administrator_Name__c</fullName>
    <label>Administrator Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>