force-app/main/default/objects/GearsHealth__Test_Class_Audit_Parameters__mdt/fields/GearsHealth__Calculate_Code_Coverage__c.field-meta.xml
<CustomField>
    <fullName>GearsHealth__Calculate_Code_Coverage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Requires Connected App, Auth Provider, and named Credentials to be configured</description>
    <inlineHelpText>Requires Connected App, Auth Provider, and named Credentials to be configured</inlineHelpText>
    <label>Calculate Code Coverage</label>
    <type>Checkbox</type>
</CustomField>