force-app/main/default/objects/GearsHealth__Test_Class_Audit_Parameters__mdt/fields/GearsHealth__Calculate_Flow_Code_Coverage__c.field-meta.xml
<CustomField>
    <fullName>GearsHealth__Calculate_Flow_Code_Coverage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Calculate Flow Code Coverage</label>
    <type>Checkbox</type>
</CustomField>