force-app/main/default/objects/GearsHealth__Test_Class_Audit_Parameters__mdt/fields/GearsHealth__Check_Audit_Increments__c.field-meta.xml
<CustomField>
    <fullName>GearsHealth__Check_Audit_Increments__c</fullName>
    <description>minute increments to check the audit</description>
    <label>Check Audit Increments</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>