force-app/main/default/objects/GearsHealth__Test_Class_Audit_Parameters__mdt/fields/GearsHealth__Code_Coverage_Tolerance__c.field-meta.xml
<CustomField>
    <fullName>GearsHealth__Code_Coverage_Tolerance__c</fullName>
    <description>Generate Email when code coverage falls below this value.</description>
    <inlineHelpText>Generate Email when code coverage falls below this value.</inlineHelpText>
    <label>Code Coverage Tolerance</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>