force-app/main/default/objects/GearsHealth__Test_Class_Audit_Parameters__mdt/fields/GearsHealth__Duration_Tolerance__c.field-meta.xml
<CustomField>
    <fullName>GearsHealth__Duration_Tolerance__c</fullName>
    <defaultValue>10000</defaultValue>
    <label>Duration Tolerance (seconds)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>