force-app/main/default/objects/GearsHealth__Test_Class_Audit_Parameters__mdt/fields/GearsHealth__Email_Distribution__c.field-meta.xml
<CustomField>
    <fullName>GearsHealth__Email_Distribution__c</fullName>
    <label>Email Distribution</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>