force-app/main/default/objects/GearsHealth__Test_Class_Audit_Parameters__mdt/fields/GearsHealth__Extension_Class__c.field-meta.xml
<CustomField>
    <fullName>GearsHealth__Extension_Class__c</fullName>
    <label>Extension Class</label>
    <length>150</length>
    <type>Text</type>
</CustomField>