force-app/main/default/objects/GearsHealth__Test_Class_Audit_Parameters__mdt/fields/GearsHealth__Fail_Email_Subject__c.field-meta.xml
<CustomField>
    <fullName>GearsHealth__Fail_Email_Subject__c</fullName>
    <label>Fail Email Subject</label>
    <length>50</length>
    <type>Text</type>
</CustomField>