force-app/main/default/objects/GearsHealth__Test_Class_Audit_Parameters__mdt/fields/GearsHealth__Flow_Code_Coverage_Tolerance__c.field-meta.xml
<CustomField>
    <fullName>GearsHealth__Flow_Code_Coverage_Tolerance__c</fullName>
    <label>Flow Code Coverage Tolerance</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>