force-app/main/default/objects/GearsHealth__Test_Class_Audit_Parameters__mdt/fields/GearsHealth__Ignore_Errors__c.field-meta.xml
<CustomField>
    <fullName>GearsHealth__Ignore_Errors__c</fullName>
    <label>Ignore Errors</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>