force-app/main/default/objects/GearsHealth__Test_Class_Audit_Parameters__mdt/fields/GearsHealth__Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>GearsHealth__Named_Credential__c</fullName>
    <description>Required only if interested in code coverage.</description>
    <inlineHelpText>Required only if interested in code coverage.</inlineHelpText>
    <label>Named Credential</label>
    <length>50</length>
    <type>Text</type>
</CustomField>