force-app/main/default/objects/GearsHealth__Test_Class_Audit_Parameters__mdt/fields/GearsHealth__Save_File_On_Failure__c.field-meta.xml
<CustomField>
    <fullName>GearsHealth__Save_File_On_Failure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Save File On Failure</label>
    <type>Checkbox</type>
</CustomField>