force-app/main/default/objects/GearsHealth__Test_Class_Audit_Parameters__mdt/fields/GearsHealth__Send_Email_On_Failure__c.field-meta.xml
<CustomField>
    <fullName>GearsHealth__Send_Email_On_Failure__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Send Email On Failure</label>
    <type>Checkbox</type>
</CustomField>