force-app/main/default/objects/GearsHealth__Test_Class_Audit_Parameters__mdt/fields/GearsHealth__Send_Email_on_Success__c.field-meta.xml
<CustomField>
    <fullName>GearsHealth__Send_Email_on_Success__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Email on Success</label>
    <type>Checkbox</type>
</CustomField>