force-app/main/default/objects/GearsHealth__Test_Class_Audit_Parameters__mdt/fields/GearsHealth__Success_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>GearsHealth__Success_Email_Template__c</fullName>
    <label>Success Email Template</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>